# paper-Glerum-Sensitivity-surface-deformation-mantle-dynamics

./: ASPECT_install_configuration.txt  README.md
code/: CMakeLists.txt  adiabat_ascii.cc  adiabat_ascii.h  ascii_T_regions.cc  ascii_T_regions.h  ascii_data_function.cc  ascii_data_function.h  multicomponent_vp.cc  multicomponent_vp.h  point_values_eigen_vectors.cc  point_values_eigen_vectors.h  table_vp.cc  table_vp.h  two_merged_chunks.cc  two_merged_chunks.h
prm/: K08_CUB_S20RTS.prm  K08_Eu_fixed.prm  K08_GAP_P4.prm  K08_LLNL_G3D.prm  K08_Nb_fixed.prm  K08_Nbx2.prm  K08_Nbx4.prm  K08_P06_CSloc.prm  K08_P06_CSloc_05Mantlevisc.prm  K08_P06_CSloc_2Mantlevisc.prm  K08_P06_CSloc_B.prm  K08_P06_CSloc_hor_detach_200_300.prm  K08_P06_CSloc_hor_detach_200_300_Crete.prm  K08_P06_CSloc_lin.prm  K08_P06_CSloc_max.prm  K08_P06_CSloc_min.prm  K08_P06_CSloc_noLMtomo.prm  K08_P06_CSloc_noslab.prm  K08_P06_CSloc_noslab_200.prm  K08_P06_CSloc_ver_detach_Kephalonia.prm  K08_S40RTS.prm  K08_SAVANI.prm  K08_SEMUCB.prm  K08_SL2013_S40RTS.prm  K08_TX2015.prm  K08_notomo.prm  prm_to_model_names.txt  prm_to_model_names_full.txt
python_stat_scripts/: compute_GPS_misfit_potato.py  compute_list_GPS_misfit_potato.py  compute_list_GPS_misfit_potato_relframe.py
python_visu_scripts/: Eu_fixed_diff.py  Eu_fixed_relframe.py  Eu_fixed_relframe_GPS.py  NAEG_Kreemer_2014_Nb_D12.vtk  Nb_fixed_diff.py  Nb_fixed_relframe.py  Nb_fixed_relframe_GPS.py  Nbx2_diff.py  Nbx2_relframe.py  Nbx2_relframe_GPS.py  Nbx4_diff.py  Nbx4_relframe.py  P06_CSloc_diff.py  P06_CSloc_eigenvectors.o59873  contour_slab.py  (+41 more)
